# LLM-for-FSCQ

./: .gitignore  .gitmodules  LICENSE  README.md  dune  lCoq.opam  run.sh
src/: coq_sentence.mll  dune  gemini.ml  gptf.ml  main.ml  openai.ml  serpp.ml  serutils.ml  strip_proof.ml  utils.ml
tiktoken-cli/: Cargo.toml
tiktoken-cli/src/: main.rs
