opam-version: "2.0"
name: "lCoq"
version: "0.1"
synopsis: "LLM for FSCQ"
maintainer: "QDelta"
authors: "QDelta"
depends: [
  "ocaml" {= "4.14.2"}
  "dune" {= "3.16.1"}
  "ocamlfind" {= "1.9.6"}
  "re" {= "1.12.0"}
  "yojson" {= "2.2.2"}
  "ppx_yojson_conv" {= "v0.15.1"}
  "ocurl" {= "0.9.2"}
  "menhir" {= "20240715"}
]
pin-depends: [
  ["coq.8.16.1" "git+https://github.com/ejgallego/coq.git#v8.16+lsp"]
  ["coq-serapi.8.16.0+0.16.3" "git+https://github.com/QDelta/coq-serapi.git#states"]
]
